DROP TABLE IF EXISTS product_images;
DROP TABLE IF EXISTS inventory;
DROP TABLE IF EXISTS products;
DROP TABLE IF EXISTS brands;
DROP TABLE IF EXISTS categories;
DROP TABLE IF EXISTS seller_profiles;


CREATE TABLE products (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    seller_id BIGINT NOT NULL,
    name VARCHAR(200) NOT NULL,
    description TEXT,
    price NUMERIC(12, 2) NOT NULL,
    quantity INTEGER NOT NULL DEFAULT 0,
    image_url VARCHAR(1000),
    active BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT fk_products_seller
        FOREIGN KEY (seller_id)
        REFERENCES users (id)
        ON DELETE RESTRICT,

    CONSTRAINT chk_products_price
        CHECK (price > 0),

    CONSTRAINT chk_products_quantity
        CHECK (quantity >= 0)
);

CREATE INDEX idx_products_seller_id
    ON products (seller_id);

CREATE INDEX idx_products_catalog
    ON products (active, quantity);

CREATE INDEX idx_products_price
    ON products (price);

CREATE INDEX idx_products_name
    ON products (LOWER(name));


CREATE TABLE cart_items (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    buyer_id BIGINT NOT NULL,
    product_id BIGINT NOT NULL,
    quantity INTEGER NOT NULL DEFAULT 1,
    selected BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT fk_cart_items_buyer
        FOREIGN KEY (buyer_id)
        REFERENCES users (id)
        ON DELETE CASCADE,

    CONSTRAINT fk_cart_items_product
        FOREIGN KEY (product_id)
        REFERENCES products (id)
        ON DELETE CASCADE,

    CONSTRAINT uk_cart_items_buyer_product
        UNIQUE (buyer_id, product_id),

    CONSTRAINT chk_cart_items_quantity
        CHECK (quantity > 0)
);

CREATE INDEX idx_cart_items_buyer_id
    ON cart_items (buyer_id);


CREATE TABLE orders (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    buyer_id BIGINT NOT NULL,
    status VARCHAR(30) NOT NULL DEFAULT 'IN_TRANSIT',
    total_amount NUMERIC(14, 2) NOT NULL,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    delivered_at TIMESTAMP WITH TIME ZONE,

    CONSTRAINT fk_orders_buyer
        FOREIGN KEY (buyer_id)
        REFERENCES users (id)
        ON DELETE RESTRICT,

    CONSTRAINT chk_orders_status
        CHECK (status IN ('IN_TRANSIT', 'DELIVERED')),

    CONSTRAINT chk_orders_total_amount
        CHECK (total_amount > 0)
);

CREATE INDEX idx_orders_buyer_created_at
    ON orders (buyer_id, created_at DESC);


CREATE TABLE order_items (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_id BIGINT NOT NULL,
    product_id BIGINT NOT NULL,
    seller_id BIGINT NOT NULL,
    product_name VARCHAR(200) NOT NULL,
    unit_price NUMERIC(12, 2) NOT NULL,
    quantity INTEGER NOT NULL,
    image_url VARCHAR(1000),

    CONSTRAINT fk_order_items_order
        FOREIGN KEY (order_id)
        REFERENCES orders (id)
        ON DELETE CASCADE,

    CONSTRAINT fk_order_items_product
        FOREIGN KEY (product_id)
        REFERENCES products (id)
        ON DELETE RESTRICT,

    CONSTRAINT fk_order_items_seller
        FOREIGN KEY (seller_id)
        REFERENCES users (id)
        ON DELETE RESTRICT,

    CONSTRAINT chk_order_items_unit_price
        CHECK (unit_price > 0),

    CONSTRAINT chk_order_items_quantity
        CHECK (quantity > 0)
);

CREATE INDEX idx_order_items_order_id
    ON order_items (order_id);

CREATE INDEX idx_order_items_seller_id
    ON order_items (seller_id);


CREATE TABLE payment_cards (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL,
    card_token VARCHAR(100) NOT NULL UNIQUE,
    masked_number VARCHAR(30) NOT NULL,
    balance NUMERIC(14, 2) NOT NULL DEFAULT 0,
    active BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT fk_payment_cards_user
        FOREIGN KEY (user_id)
        REFERENCES users (id)
        ON DELETE CASCADE,

    CONSTRAINT chk_payment_cards_balance
        CHECK (balance >= 0)
);

CREATE INDEX idx_payment_cards_user_id
    ON payment_cards (user_id);
